Updated the page title to 'Product and Pricing Filter Generator'

--- a/api-runtime/rest-runtime/admin-web/html/priceinfo-filter-gen.html
+++ b/api-runtime/rest-runtime/admin-web/html/priceinfo-filter-gen.html
@@ -107,7 +107,7 @@
 </head>
 <body>
     <div class="container">
-        <h2>Product and Pricing Information Filter</h2>
+        <h2>Product and Pricing Information Filter Generator</h2>
         <form id="filterForm">
             <h3>Product Information</h3>
             <div class="form-row">
