--- a/api-runtime/rest-runtime/admin-web/html/priceinfo-request-template.html
+++ b/api-runtime/rest-runtime/admin-web/html/priceinfo-request-template.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Multi-Cloud Price Info</title>
+    <title>Multi-Cloud Price Info Request</title>
     <style>
         .container {
             width: 80%;
