--- a/api-runtime/rest-runtime/admin-web/html/priceinfo-filter-gen.html
+++ b/api-runtime/rest-runtime/admin-web/html/priceinfo-filter-gen.html
@@ -8,6 +8,16 @@
             margin: auto;
             padding: 20px;
         }
+        h3 {
+            margin-top: 10px; 
+            margin-bottom: 10px; 
+        }
+
+        .form-group label {
+            display: block;
+            margin-bottom: 5px;
+            font-size: 14px; 
+        }
         .form-row {
             display: flex;
             justify-content: space-between;
@@ -48,7 +58,7 @@
         .confirm-btn {
             padding: 10px 20px;
             background-color: #f0f0f0; /* Light gray background */
-            color: rgb(59, 59, 206); /* Dark text for contrast */
+            color: rgb(59, 59, 206);
             border: 1px solid #ccc; /* Slight border */
             border-radius: 4px;
             cursor: pointer;
@@ -67,6 +77,17 @@
             cursor: pointer;
             margin-top: 10px;
         }
+        .top-close-btn {
+            background-color: #f0f0f0;
+            color: #d9534f;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            cursor: pointer;
+            position: absolute;
+            top: 10px;
+            right: 10px;
+        }
+
         .close-btn:hover {
             background-color: #e0e0e0; /* Slightly darker gray on hover */
         }
@@ -119,6 +140,7 @@
     </style>
 </head>
 <body>
+    <button type="button" class="top-close-btn" onclick="window.parent.closeGenOverlay()">X</button>
     <div class="container">
         <h2>Product and Pricing Information Filter Generator</h2>
         <form id="filterForm">
@@ -219,7 +241,7 @@
             <div class="button-group">
                 <button type="button" class="clear-btn" onclick="clearForm()">Clear</button>
                 <button type="button" class="confirm-btn" onclick="confirmFilter()">Confirm</button>
-                <button type="button" class="close-btn" onclick="window.parent.closeOverlay()">Close</button>
+                <button type="button" class="close-btn" onclick="window.parent.closeGenOverlay()">Close</button>
             </div>
         </form>        
 
