Fixed the JSON result format of the ProductFamily list API to Spider standards

--- a/api-runtime/rest-runtime/admin-web/html/priceinfo-request-template.html
+++ b/api-runtime/rest-runtime/admin-web/html/priceinfo-request-template.html
@@ -239,9 +239,9 @@
 
             fetch(`/spider/productfamily/${region}?ConnectionName=${connectionName}`)
                 .then(response => response.json())
-                .then(productFamilies => {
+                .then(data => {
                     clearInterval(intervalId); // stop the interval
-                    populateProductFamilySelect('productFamily', productFamilies);
+                    populateProductFamilySelect('productFamily', data.productfamily);
                 })
                 .catch(error => {
                     console.error('Error:', error);
