Fixed the Table Header namte of 'Instance Type' to 'Product Info'

--- a/api-runtime/rest-runtime/admin-web/html/priceinfo-tablelist-template.html
+++ b/api-runtime/rest-runtime/admin-web/html/priceinfo-tablelist-template.html
@@ -171,7 +171,7 @@
         <tr>
             <th>Product ID</th>
             <th>Region/Zone</th>
-            <th>Instance Type</th>
+            <th>Product Info</th>
             <th>{{.CloudName}} Product Info</th>
             <th class="pricing-policies-header">Pricing Policies</th>
             <th class="pricing-policies-header">{{.CloudName}} Price Info</th>
