--- a/api-runtime/rest-runtime/admin-web/html/priceinfo-request-template.html
+++ b/api-runtime/rest-runtime/admin-web/html/priceinfo-request-template.html
@@ -158,6 +158,8 @@
                 <div class="button-textarea-group">
                     <label for="filter">Filter</label>
                     <button type="button" class="gen-tool-btn" onclick="openGenOverlay()">Gen...</button>
+                    <!-- 'Clear' 버튼 추가 -->
+                    <button type="button" class="gen-tool-btn" onclick="clearFilter()">Clear</button>
                 </div>
                 <textarea id="filter" name="filter" spellcheck="false"></textarea>
             </div>
@@ -327,6 +329,9 @@
                 });
         }
 
+        function clearFilter() {
+            document.getElementById('filter').value = ''; 
+        }
 
         function closeFetchOverlay() {
             document.getElementById('fetchOverlay').style.display = 'none';
