Fix the 'X' button position to remain visible when scrolling through many items in tables

--- a/api-runtime/rest-runtime/admin-web/html/priceinfo-tablelist-template.html
+++ b/api-runtime/rest-runtime/admin-web/html/priceinfo-tablelist-template.html
@@ -10,7 +10,7 @@
             border: 1px solid #ccc;
             border-radius: 4px;
             cursor: pointer;
-            position: absolute;
+            position: fixed;
             top: 20px;
             right: 20px;
         }
