--- a/api-runtime/rest-runtime/admin-web/html/priceinfo-filter-gen.html
+++ b/api-runtime/rest-runtime/admin-web/html/priceinfo-filter-gen.html
@@ -83,7 +83,7 @@
             border: 1px solid #ccc;
             border-radius: 4px;
             cursor: pointer;
-            position: absolute;
+            position: fixed;
             top: 10px;
             right: 10px;
         }
