Add display limit and download button for too large priceinfo items

--- a/api-runtime/rest-runtime/admin-web/html/priceinfo-tablelist-template.html
+++ b/api-runtime/rest-runtime/admin-web/html/priceinfo-tablelist-template.html
@@ -115,6 +115,30 @@
             }
         }
 
+        function getFormattedDateTime() {
+            var now = new Date();
+            var year = now.getFullYear();
+            var month = ('0' + (now.getMonth() + 1)).slice(-2);
+            var day = ('0' + now.getDate()).slice(-2);
+            var hours = ('0' + now.getHours()).slice(-2);
+            var minutes = ('0' + now.getMinutes()).slice(-2);
+            var seconds = ('0' + now.getSeconds()).slice(-2);
+            return year + "-" + month + "-" + day + "_" + hours + "-" + minutes + "-" + seconds;
+        }
+
+        function downloadJson(cloudName) {
+            var data = document.getElementById("json-all").textContent;
+            var blob = new Blob([data], {type: "application/json"});
+            var url = URL.createObjectURL(blob);
+            var a = document.createElement("a");
+            a.href = url;
+            a.download = cloudName + "_price_info_" + getFormattedDateTime() + ".json";
+            document.body.appendChild(a);
+            a.click();
+            document.body.removeChild(a);
+            URL.revokeObjectURL(url);
+        }
+
         function copyToClipboard(cloudName) {
             var content = document.getElementById("json-all").textContent;
             var textArea = document.createElement("textarea");
@@ -164,12 +188,16 @@
     <div class="cloudHeader">
         <h3>{{.CloudName}}</h3>
         <button id="toggleButton-{{.CloudName}}" onclick="toggleView('{{.CloudName}}')">JSON View</button>
+        <button onclick="downloadJson('{{.CloudName}}')">JSON Download</button>        
         <button id="copyButton-{{.CloudName}}" class="copy-btn" onclick="copyToClipboard('json-all')">📋</button>
+        {{if gt (len .PriceList) 150}}
+        <span style="margin-left: 10px; color: blue;">※ Display limit: 150. Full info via 'JSON Download'.</span>
+        {{end}}
     </div>
 
     <table id="table-{{.CloudName}}">
         <tr>
-            <th>#</th>
+            <th>#{{len .PriceList}}</th>
             <th>Product ID</th>
             <th>Region/Zone</th>
             <th>Product Info</th>
@@ -178,6 +206,7 @@
             <th class="pricing-policies-header">{{.CloudName}} Price Info</th>
         </tr>
         {{range $index, $_ := .PriceList}}
+        {{if lt $index 150}}
         <tr>
             <td class="center-text">{{inc $index}}</td>
             <td class="center-text">[{{.ProductInfo.ProductId}}]<br><br>※ {{.ProductInfo.Description}}</td>
@@ -241,6 +270,7 @@
                 <pre id="cspPriceInfo-{{.ProductInfo.ProductId}}" style="display: none;">{{.PriceInfo.CSPPriceInfo | json}}</pre>    
             </td>
         </tr>
+        {{end}}
         {{end}}
     </table>
     {{end}}
