Chagne the page title of Dashboard

--- a/api-runtime/rest-runtime/admin-web/html/dashboard.html
+++ b/api-runtime/rest-runtime/admin-web/html/dashboard.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>CB-Spider Global Dashboard</title>
+<title>CB-Spider Multi-Cloud Dashboard</title>
 <style>
     body {
         font-family: Arial, sans-serif;
@@ -211,7 +211,7 @@
 </head>
 <body>
     <div class="fixed-header">
-        <h1>Cloud Connection Dashboard</h1>
+        <h1>Multi-Cloud Dashboard</h1>
         <div class="form-inline">
             <label>
                 <input type="checkbox" id="showEmpty" name="showEmpty" value="true" {{if .ShowEmpty}}checked{{end}} onchange="toggleShowEmpty()"> Show Empty Connections
