--- a/api-runtime/rest-runtime/admin-web/html/main.html
+++ b/api-runtime/rest-runtime/admin-web/html/main.html
@@ -16,7 +16,7 @@
             height: 100%;
         }
         .left-menu {
-            width: 150px;
+            width: 120px; /* Set width to 120px */
             border-right: 1px solid #ccc;
             height: 100%;
             flex-shrink: 0;
