Add Tag Management Server and Upgrade & Test for VPC/Subnet AdminWeb2 Page

--- a/api-runtime/rest-runtime/admin-web/html/left_menu.html
+++ b/api-runtime/rest-runtime/admin-web/html/left_menu.html
@@ -20,21 +20,22 @@
         }
         .menu-item img {
             vertical-align: middle;
-            height: 30px; /* Set height to 30px */
+            height: 35px; /* Set height to 30px */
             width: auto; /* Maintain aspect ratio */
         }
         .logo img {
-            height: 47px; /* Set height to 47px */
+            height: 50px;
             width: auto; /* Maintain aspect ratio */
         }
         .menu-text {
             margin-top: 0; /* Remove or minimize the top margin */
             text-align: center;
+            font-size: 12px;
         }
         .divider {
             width: 80%;
             height: 1px;
-            background-color: #ccc;
+            background-color: #666; /* Change color to a darker shade */
             margin: 5px auto; /* Add margin to separate the divider and center it */
         }
     </style>
@@ -157,5 +158,6 @@
         <img id="cluster-img" src="./images/left-menu/cluster.png" alt="Cluster Icon">
         <div class="menu-text">Cluster</div>
     </div>
+    <div class="divider"></div> <!-- Divider after Cluster -->
 </body>
 </html>
