Update menu style for better UI

--- a/api-runtime/rest-runtime/admin-web/html/left_menu.html
+++ b/api-runtime/rest-runtime/admin-web/html/left_menu.html
@@ -24,13 +24,15 @@
             width: auto; /* Maintain aspect ratio */
         }
         .logo img {
+            margin-top: 0;
+            margin-bottom: 0;
             height: 50px;
             width: auto; /* Maintain aspect ratio */
         }
         .menu-text {
             margin-top: 0; /* Remove or minimize the top margin */
             text-align: center;
-            font-size: 12px;
+            font-size: 11px;
         }
         .divider {
             width: 80%;
